review, routes path

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,1 +1,6 @@
-<div>Contact</div>
+<%= link_to "Contact", "/rails/123/ruby" %>
+<%= link_to "Contact", rails_ta_path(@contact_id) %>
+<%= @contact_id %>
+<%= @contact1_id %>
+<%= @contact2_id %>
+
