--- a/app/views/product_item/show.html.erb
+++ b/app/views/product_item/show.html.erb
@@ -1,2 +1,5 @@
-<h1>ProductItem#show</h1>
-<p>Find me in app/views/product_item/show.html.erb</p>
+<div>
+  <%= @product_item.name %>
+  <%= @product_item.price %>
+
+</div>
