update, before action and render partial

--- a/app/views/student/index.html.erb
+++ b/app/views/student/index.html.erb
@@ -12,5 +12,11 @@
     <div>
       <%= student.class_name %>
     </div>
+    <div>
+      <%= link_to "Click to delete", student_delete_path(student.id), method: :delete, data:{confirm: "Delete?"}  %>
+    </div>
   <% end %>
+</div>
+<div>
+  <%= link_to "Create new", student_new1_path %>
 </div>
