--- a/app/views/food/_form.html.erb
+++ b/app/views/food/_form.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= form_with model: @book, url: path do |f| %>
+  <%= form_with model: @food, url: path do |f| %>
     <div>
       <%= f.label :name %>
       <%= f.text_field :name, placeholder: "Enter name" %>
