--- a/app/views/category/index.html.erb
+++ b/app/views/category/index.html.erb
@@ -1,17 +1,22 @@
-<div>
-  <% @categories.each do |category| %>
+<div class = "container">
+    <% @categories.each do |category| %>
     <div>
-      <%= category.name %>
+      <div>
+        <%= category.name %>
+      </div>
+      <div>
+        <%= category.price %>
+      </div>
+      <div>
+        <%= link_to "Show detail", category_show_path(category.id),
+        class: "btn btn-info" %>
+      </div>
+      <div>
+        <%= link_to "Delete", category_delete_path(category.id), method: :delete,
+        data: {confirm: "Are you sure?"}, class: "btn btn-outline-warning" %>
+      </div>
     </div>
-    <div>
-      <%= category.price %>
-    </div>
-    <div>
-      <%= link_to "Show detail", category_show_path(category.id) %>
-    </div>
-    <div>
-      <%= link_to "Delete", category_delete_path(category.id), method: :delete, data: {confirm: "Are you sure?"} %>
-    </div>
-  <% end %>
+
+    <% end %>
+  <%= link_to "New", category_new_path, class: "btn-new" %>
 </div>
-<%= link_to "New", category_new_path %>
