--- a/app/assets/stylesheets/category.scss
+++ b/app/assets/stylesheets/category.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Category controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.btn-new {
+  background-color: red;
+  padding: 5px 50px;
+  color: white;
+  font-size: 20px;
+  border-radius: 50px;
+  font-weight: 700;
+}
+
+.btn-new:hover {
+  background-color: rgba($color: #ff0000, $alpha: 0.8);
+  text-decoration: none;
+}
