--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,5 +32,10 @@
   <% end %>
 </p>
 
+<p>
+  <strong>Image</strong>
+  <%= @user.image.attached? ? @user.image : "No image" %>
+</p>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
