--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Student</h1>
 
-<%= render 'form', student: @student, path: subject_students_path(@subject.id) %>
+<%= render 'form', student: @student, path: subject_students_path(@subject) %>
 
 <%= link_to 'Back', @subject %>
