--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -22,9 +22,9 @@
         <td><%= student.phone %></td>
         <td><%= student.address %></td>
         <td><%= student.bio %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', subject_student_path(@subject, student.id) %></td>
+        <td><%= link_to 'Edit', edit_subject_student_path(@subject,student) %></td>
+        <td><%= link_to 'Destroy', subject_student_path(@subject, student.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
