--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -15,5 +15,13 @@
   <%= @teacher.phone %>
 </p>
 
+<p>
+  <strong>Students:</strong>
+  <% @teacher.students&.each do |student| %>
+    <%= link_to student.name,  teacher_student_path(@teacher, student.id)  %>
+  <% end %>
+</p>
+
+<%= link_to 'New Student', new_teacher_student_path(@teacher) %> |
 <%= link_to 'Edit', edit_teacher_path(@teacher) %> |
 <%= link_to 'Back', teachers_path %>
