--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: record) do |form| %>
+<%= form_with(model: record, url: path) do |form| %>
   <% if record.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(record.errors.count, "error") %> prohibited this record from being saved:</h2>
