--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Record</h1>
 
-<%= render 'form', record: @record %>
+<%= render 'form', record: @record, path:  student_records_path(@student) %>
 
-<%= link_to 'Back', records_path %>
+<%= link_to 'Back', student_path(@student) %>
