--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Student</h1>
 
-<%= render 'form', student: @student %>
+<%= render 'form', student: @student, path: teacher_students_path(@teacher) %>
 
-<%= link_to 'Back', students_path %>
+<%= link_to 'Back', teacher_path(@teacher) %>
