has many association

--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: record) do |form| %>
+<%= form_with(model: record, url: path) do |form| %>
   <% if record.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(record.errors.count, "error") %> prohibited this record from being saved:</h2>
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :course %>
-    <%= form.text_field :course %>
+    <%= form.label :grade %>
+    <%= form.text_field :grade %>
   </div>
 
   <div class="field">
-    <%= form.label :grade %>
-    <%= form.text_field :grade %>
+    <%= form.label :teacher_id %>
+    <%= form.collection_select :teacher_id, teachers, :id, :name, include_blank: true %>
   </div>
 
   <div class="actions">
