--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -10,5 +10,5 @@
   <%= @record.grade %>
 </p>
 
-<%= link_to 'Edit', edit_record_path(@record) %> |
-<%= link_to 'Back', records_path %>
+<%= link_to 'Edit', edit_student_record_path(@student, @record) %> |
+<%= link_to 'Back', student_path(@student) %>
