has many association

--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: bill) do |form| %>
+<%= form_with(model: bill, url: path) do |form| %>
   <% if bill.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(bill.errors.count, "error") %> prohibited this bill from being saved:</h2>
@@ -15,6 +15,12 @@
     <%= form.label :date %>
     <%= form.datetime_select :date %>
   </div>
+
+  <div class="field">
+    <%= form.label :product_id %>
+    <%= form.collection_select :product_id, product_name, :id, :name, include_blank: true %>
+  </div>
+
 
   <div class="actions">
     <%= form.submit %>
