--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,6 +8,7 @@
       <th>Name</th>
       <th>Price</th>
       <th>Description</th>
+      <th>Sold</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= product.name %></td>
         <td><%= product.price %></td>
         <td><%= product.description %></td>
+        <td><%= product.bills.size %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -29,3 +31,4 @@
 <br>
 
 <%= link_to 'New Product', new_product_path %>
+<%= link_to 'Back To Customer', customers_path %>
