add session controller

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,10 +27,10 @@
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="/users/new">Sign Up</a>
+           <%= link_to 'Sign Up', new_user_path, class: "nav-link" %>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="#">Log In</a>
+          <%= link_to 'Log in', login_path, class: "nav-link" %>
         </li>
       </ul>
       <form class="d-flex">
