--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,12 +26,18 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
+        <% if sign_in? == false %>
          <li class="nav-item">
            <%= link_to 'Sign Up', new_user_path, class: "nav-link" %>
         </li>
           <li class="nav-item">
           <%= link_to 'Log in', login_path, class: "nav-link" %>
         </li>
+        <% else %>
+          <li class="nav-item">
+          <%= link_to 'Log out', logout_path, class: "nav-link", data: {confirm: "Ban muon logout"} %>
+        </li>
+        <% end %>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
