--- a/app/views/session/index.html.erb
+++ b/app/views/session/index.html.erb
@@ -1,6 +1,17 @@
 
 
 <%= render 'header' %>
-<% if notice.present?%>
-    <%= notice %>
-<% end %>
+<div>
+  <% if flash.present? %>
+      <% flash.each do |key, value| %>
+        <div class="flash <%= key %>"><%= value %></div>
+      <% end %>
+  <% end %>
+</div>
+<div>
+  <label>
+  <% if @user.present? %>
+    <%= @user.name %>
+  <% end %>
+  </label>
+</div>
