--- a/app/views/session/index.html.erb
+++ b/app/views/session/index.html.erb
@@ -12,12 +12,32 @@
       </div>
     <% end %>
   <% else %>
-  <div>
+    <div class="card">
+      <div class="card-body">
+        <%= @user.avatar.attached? ?  image_tag(@user.avatar, size: '200', class: "img img-avatar" )  :  image_tag("/assets/avatar.png", size: '200', class: "img img-avatar" )%>
+      </div>
+      <div class= "card-profile">
+          <div>
+            <span>Name:</span>
+            <%= @user.name %>
+          </div>
+          <div>
+            <span>Email:</span>
+            <%= @user.email %>
+          </div>
+          <div>
+            <span>Phone:</span>
+            <%= @user.phone %>
+          </div>
+        </div>
+      <div class = "btn-block">
+        <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary btn-edit" %>
+      </div>
+      <div class = btn-block>
+        <%= link_to 'Log Out', logout_path, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-primary btn-logout" %>
+      </div>
+    </div>
 
-  </div>
-  <div class = "btn-block">
-    <%= link_to 'Log Out', logout_path, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-primary btn-logout" %>
-  </div>
     <% flash.each do |key,value|  %>
       <div class= "flash flash-<% key %>">
         <%= value %>
