--- a/app/views/session/login.html.erb
+++ b/app/views/session/login.html.erb
@@ -20,4 +20,8 @@
   <div class="actions">
       <%= form.submit 'Login', class: "btn btn-primary" %>
   </div>
+
+   <div class="actions">
+    <%= link_to 'Forgot Password?', root_path%>
+  </div>
 <% end %>
