--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,42 @@
-<h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
+<%= form_with(model: @user) do |form| %>
+  <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+      <ul>
+        <% user.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+    <div class="field mb-3">
+        <%= form.label :avatar, "Change Avatar", class: "form-label"  %>
+        <%= form.file_field :avatar, class: "form-control" %>
+    </div>
+
+    <div class="field mb-3">
+        <%= form.label :name, class: "form-label"  %>
+        <%= form.text_field :name, class: "form-control" %>
+      </div>
+
+    <div class="field mb-3">
+      <%= form.label :email, class: "form-label"  %>
+      <%= form.text_field :email, class: "form-control" %>
+    </div>
+
+    <div class="field mb-3">
+      <%= form.label :phone, class: "form-label"  %>
+      <%= form.number_field :phone, class: "form-control" %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit 'Save Change', class: "btn btn-primary" %>
+    </div>
+
+    <div class="actions">
+    <%= link_to 'Change Password?', login_path %>
+    </div>
+
+  <% end %>
