--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,14 @@
   border-radius: 40px;
 }
 
+.flash {
+  font-size: 14px;
+}
+
+.flash-errors {
+  color: #fa1e0e;
+}
+
 .card .card-body {
   margin: auto;
 }
