--- a/app/views/session/login.html.erb
+++ b/app/views/session/login.html.erb
@@ -1,15 +1,8 @@
-<div>
-  <% flash.each do |key,value|  %>
-      <div class= "flash flash-<% key %>">
-        <%= value %>
-      </div>
-  <% end %>
-</div>
 
 <%= form_with url: create_path do |form| %>
   <div class="field mb-3">
     <%= form.label :email, class: "form-label"  %>
-    <%= form.text_field :email, class: "form-control" %>
+    <%= form.text_field :email, class: "form-control"%>
   </div>
 
   <div class="field mb-3">
@@ -17,11 +10,27 @@
     <%= form.password_field :password, class: "form-control" %>
   </div>
 
+
+  <div class= "flash">
+    <% flash.each do |key,value|  %>
+      <div class= "flash-<%= key %>">
+        <%= value %>
+      </div>
+    <% end %>
+  </div>
+
+
   <div class="actions">
       <%= form.submit 'Login', class: "btn btn-primary" %>
   </div>
 
+    <div class="actions">
+      <%= link_to 'Or Signup?', signup_path %>
+    </div>
+
+
+
    <div class="actions">
-    <%= link_to 'Forgot Password?', root_path%>
+    <%= link_to 'Forgot Password?', "#"%>
   </div>
 <% end %>
