--- a/app/views/session/login.html.erb
+++ b/app/views/session/login.html.erb
@@ -1,4 +1,5 @@
 
+<div class= "container form">
 <%= form_with url: create_path do |form| %>
   <div class="field mb-3">
     <%= form.label :email, class: "form-label"  %>
@@ -27,10 +28,9 @@
     <div class="actions">
       <%= link_to 'Or Signup?', signup_path %>
     </div>
-
-
-
-   <div class="actions">
-    <%= link_to 'Forgot Password?', "#"%>
+  <div class="actions">
+    <%= link_to 'Forgot Password?', change_password_path%>
   </div>
 <% end %>
+
+</div>
