--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,21 +1,45 @@
 @import "bootstrap";
 
-.container {
+* {
+  margin: 2px;
+  box-sizing: border-box;
+}
+
+.container-fluid #nav {
+  max-height: 46px;
+  padding: 1px;
+}
+
+.container-fluid .form,
+.container-fluid .card {
+  display: flex;
+  justify-content: center;
+  min-width: 500px;
+}
+
+.btn-group {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 30px;
+  margin: 200px 100px;
+  max-height: 100px;
 }
-.container .btn-block {
+.btn-group .btn-block,
+.btn-block {
   padding-left: 12px;
-  margin: 18px 12px;
-}
-.btn {
-  min-width: 300px;
-  font-size: 18px;
-  border-radius: 40px;
+  margin: 18px 20px;
 }
 
+.btn {
+  background-color: #000;
+  min-width: 200px;
+  font-size: 18px;
+  border-radius: 40px;
+  cursor: pointer;
+}
+.btn:hover {
+  background: rgba(0, 0, 0, 0.6);
+}
 .flash {
   font-size: 14px;
 }
@@ -23,7 +47,6 @@
 .flash-errors {
   color: #fa1e0e;
 }
-
 .card .card-body {
   margin: auto;
 }
@@ -32,8 +55,12 @@
 }
 .card .card-profile {
   margin-top: 24px;
-  margin-left: 24px;
   min-width: 100%;
+}
+
+.card .btn-block {
+  margin-left: auto;
+  margin-right: auto;
 }
 .card .card-profile div + div {
   padding-top: 8px;
