--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,4 @@
+<div class= "contaniner form">
 <%= form_with(model: user) do |form| %>
 
     <div class="field mb-3">
@@ -41,3 +42,5 @@
     </div>
 
   <% end %>
+
+  </div>
