--- a/app/views/session/showPassword.html.erb
+++ b/app/views/session/showPassword.html.erb
@@ -1,1 +1,22 @@
-<div><h3>Change Password</h3></div>
+<div class = "container form">
+  <%= form_with do |form| %>
+    <div class="field mb-3">
+      <%= form.label :password,'Last Password', class: "form-label"  %>
+      <%= form.password_field :password, class: "form-control" %>
+    </div>
+
+    <div class="field mb-3">
+      <%= form.label :new_password,'New Password', class: "form-label"  %>
+      <%= form.password_field :new_password, class: "form-control" %>
+    </div>
+
+     <div class="actions">
+      <%= form.submit 'Save Change', class: "btn btn-primary" %>
+    </div>
+  <% end %>
+  <% flash.each do |key,value|  %>
+      <div class= "flash flash-<% key %>">
+        <%= value %>
+      </div>
+    <% end %>
+</div>
