--- a/app/views/session/index.html.erb
+++ b/app/views/session/index.html.erb
@@ -5,7 +5,10 @@
     <div class = "btn-block">
       <%= link_to 'Login', login_path, class: "btn btn-primary btn-login" %>
     </div>
-     </div>
+    <div class = "btn-block">
+      <%= link_to 'Contact', contact_path, class: "btn btn-primary btn-login" %>
+    </div>
+    </div>
     <% flash.each do |key,value|  %>
       <div class= "flash flash-<% key %>">
         <%= value %>
