fix form display

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,10 @@
   min-width: 500px;
 }
 
+.form form {
+  width: 300px;
+}
+
 .btn-group {
   display: flex;
   justify-content: center;
@@ -36,6 +40,10 @@
   font-size: 18px;
   border-radius: 40px;
   cursor: pointer;
+}
+.btn-seperate {
+  display: flex;
+  justify-content: center;
 }
 .btn:hover {
   background: rgba(0, 0, 0, 0.6);
