--- a/app/views/session/_header.html.erb
+++ b/app/views/session/_header.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar sticky-top navbar-dark bg-dark">
-    <div class="container-fluid">
-    <a class="navbar-brand" href="#">Trang chủ</a>
+  <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <%= link_to 'Trang chủ', root_path, class: 'navbar-brand' %>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -19,6 +19,11 @@
       <span class="navbar-text">
         Navbar text with an inline element
       </span>
+    </div>
+    <div class="navbar-brand">
+      <% if user.present? %>
+        <%= user.name  %>
+      <% end %>
     </div>
   </div>
 </nav>
