--- a/app/views/session/showPassword.html.erb
+++ b/app/views/session/showPassword.html.erb
@@ -1,5 +1,6 @@
 <div class = "container form">
   <%= form_with do |form| %>
+
     <div class="field mb-3">
       <%= form.label :password,'Last Password', class: "form-label"  %>
       <%= form.password_field :password, class: "form-control" %>
@@ -10,13 +11,16 @@
       <%= form.password_field :new_password, class: "form-control" %>
     </div>
 
-     <div class="actions">
+     <div class="actions btn-seperate">
       <%= form.submit 'Save Change', class: "btn btn-primary" %>
     </div>
   <% end %>
+</div>
+
+<div class="flash">
   <% flash.each do |key,value|  %>
-      <div class= "flash flash-<% key %>">
-        <%= value %>
-      </div>
-    <% end %>
+    <div class= "flash flash-<% key %>">
+      <%= value %>
+    </div>
+  <% end %>
 </div>
