--- a/app/views/session/index.html.erb
+++ b/app/views/session/index.html.erb
@@ -1,36 +1,37 @@
- <div id= "nav"> <%= render 'header' %> </div>
+<div id="nav"> <%= render 'header', user: @user %> </div>
 
-
-<div class= "btn-group">
+<div class="btn-group">
   <% if has_login? === false %>
     <div class = "btn-block">
       <%= link_to 'Sign Up', new_user_path, class: "btn btn-primary btn-signup" %>
     </div>
-    <div class = "btn-block">
+    <div class="btn-block">
       <%= link_to 'Login', login_path, class: "btn btn-primary btn-login" %>
     </div>
-     </div>
-    <% flash.each do |key,value|  %>
-      <div class= "flash flash-<% key %>">
-        <%= value %>
-      </div>
-    <% end %>
+    <div class="flash">
+      <% flash.each do |key,value|  %>
+        <div class= "flash flash-<% key %>">
+          <%= value %>
+        </div>
+      <% end %>
+    </div>
   <% else %>
     <div class="card">
       <div class= "card-profile">
-          <div>
-            <%=link_to @user.name, profile_path %>
-          </div>
+        <div>
+          <%=link_to @user.name, profile_path %>
         </div>
+      </div>
       <div class = btn-block>
         <%= link_to 'Log Out', logout_path, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-primary btn-logout" %>
       </div>
     </div>
-
-    <% flash.each do |key,value|  %>
-      <div class= "flash flash-<% key %>">
-        <%= value %>
-      </div>
-    <% end %>
+    <div class="flash">
+      <% flash.each do |key,value|  %>
+        <div class= "flash flash-<% key %>">
+          <%= value %>
+        </div>
+      <% end %>
+    </div>
   <% end %>
 </div>
