--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,46 +1,47 @@
 <div class= "contaniner form">
-<%= form_with(model: user) do |form| %>
 
-    <div class="field mb-3">
+  <%= form_with(model: user) do |form| %>
+
+      <div class="field mb-3">
         <%= form.label :name, class: "form-label"  %>
         <%= form.text_field :name, class: "form-control" %>
       </div>
 
-    <div class="field mb-3">
-      <%= form.label :email, class: "form-label"  %>
-      <%= form.text_field :email, class: "form-control" %>
-    </div>
+      <div class="field mb-3">
+        <%= form.label :email, class: "form-label"  %>
+        <%= form.text_field :email, class: "form-control" %>
+      </div>
 
-    <div class="field mb-3">
-      <%= form.label :password, class: "form-label"  %>
-      <%= form.password_field :password, class: "form-control" %>
-    </div>
+      <div class="field mb-3">
+        <%= form.label :password, class: "form-label"  %>
+        <%= form.password_field :password, class: "form-control" %>
+      </div>
 
-    <div class="field mb-3">
-      <%= form.label :phone, class: "form-label"  %>
-      <%= form.telephone_field :phone, :value => @user.phone, class: "form-control" %>
-    </div>
+      <div class="field mb-3">
+        <%= form.label :phone, class: "form-label"  %>
+        <%= form.telephone_field :phone, :value => @user.phone, class: "form-control" %>
+      </div>
 
-     <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2 class= "flash flash-errors"><%= pluralize(user.errors.count, "error") %> prohibited this user from creating account:</h2>
+      <% if user.errors.any? %>
+        <div id="error_explanation">
+          <h2 class= "flash flash-errors"><%= pluralize(user.errors.count, "error") %> prohibited this user from creating account:</h2>
 
-      <ul class= "flash flash-errors">
-        <% user.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+          <ul class= "flash flash-errors">
+            <% user.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="actions">
+        <%= link_to 'Has Account? Login', login_path %>
+      </div>
+
+      <div class="actions btn-seperate">
+        <%= form.submit 'Create Account', class: "btn btn-primary" %>
+      </div>
+
   <% end %>
 
-    <div class="actions">
-      <%= form.submit 'Create Account', class: "btn btn-primary" %>
-    </div>
-
-    <div class="actions">
-      <%= link_to 'Has Account? Login', login_path %>
-    </div>
-
-  <% end %>
-
-  </div>
+</div>
