--- a/app/views/session/showProfile.html.erb
+++ b/app/views/session/showProfile.html.erb
@@ -4,7 +4,7 @@
 
    <div class="card-body">
     <%= @user.avatar.attached? ?  image_tag(@user.avatar, size: '200', class: "img img-avatar" )  :
-      image_tag("/assets/avatar.png", size: '200', class: "img img-avatar" )%>
+      image_tag("avatar.png", size: '200', class: "img img-avatar" )%>
     <div class= "card-profile">
       <div>
         <span>Name:</span>
