--- a/app/views/session/login.html.erb
+++ b/app/views/session/login.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="actions">
-      <%= link_to 'Forgot Password?', "#"%>
+      <%= link_to 'Forgot Password?', reset_password_path %>
     </div>
 
     <div class="actions btn-seperate">
