--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,8 +5,9 @@
   box-sizing: border-box;
 }
 
-.container-fluid #nav {
+#nav {
   padding: 1px;
+  justify-content: left;
 }
 
 .container-fluid .form,
