--- a/app/views/session/_header.html.erb
+++ b/app/views/session/_header.html.erb
@@ -1,25 +1,9 @@
 <nav class="navbar sticky-top navbar-dark bg-dark">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <div class="navbar-left">
     <%= link_to 'Trang chủ', root_path, class: 'navbar-brand' %>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-      </ul>
-      <span class="navbar-text">
-        Navbar text with an inline element
-      </span>
-    </div>
+    <%= link_to 'About Us', about_us_path, class: 'navbar-brand' %>
+  </div>
+  <div class="navbar-right">
     <div class="navbar-brand">
       <% if user.present? %>
         <%= user.name  %>
