--- a/app/views/session/index.html.erb
+++ b/app/views/session/index.html.erb
@@ -8,6 +8,16 @@
     <div class="btn-block">
       <%= link_to 'Login', login_path, class: "btn btn-primary btn-login" %>
     </div>
+      <div class="btn-block">
+      <%= link_to 'Search', search_path, class: "btn btn-primary btn-login" %>
+    </div>
+    <div class="btn-block">
+      <%= link_to 'New Product', new_product_path, remote: true, class: "btn btn-primary btn-login" %>
+    </div>
+    <div id="id_product_form">
+    </div>
+    <div id="id_product_show">
+    </div>
     <div class="flash">
       <% flash.each do |key,value|  %>
         <div class= "flash flash-<% key %>">
