--- a/app/views/search/new.html.erb
+++ b/app/views/search/new.html.erb
@@ -1,8 +1,3 @@
-<%= form_with(url: search_path, local: false) do |form| %>
-  <div>
-    <%= form.text_field :keyword %>
-    <%= form.submit 'Search' %>
-  </div>
-<% end %>
-
+<input type="text" name="keyword" id="id_keyword" />
 <div id="id_books_list"></div>
+<script></script>
