--- a/app/views/search/new.html.erb
+++ b/app/views/search/new.html.erb
@@ -1,3 +1,8 @@
 <input type="text" name="keyword" id="id_keyword" />
 <div id="id_books_list"></div>
 <script></script>
+<!--radio hutton!-->
+<input type="radio" id="id_male" name="gender" value="male" />
+<label for="male">Male</label><br>
+<input type="radio" id="id_female" name="gender" value="female" />
+<label for="female">Female</label><br>
