--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,6 +22,14 @@
         <%= form.telephone_field :phone, :value => @user.phone, class: "form-control" %>
       </div>
 
+       <div class="field">
+        <%= form.label :male, "Male", :value => "male"  %>
+        <%= form.radio_button :sex, "male" %>
+        <%= form.label :female, "Female", :value => "female" %>
+        <%= form.radio_button :sex, "female", :checked => true %>
+      </div>
+
+
       <% if user.errors.any? %>
         <div id="error_explanation">
           <h2 class= "flash flash-errors"><%= pluralize(user.errors.count, "error") %> prohibited this user from creating account:</h2>
