--- a/app/views/session/_header.html.erb
+++ b/app/views/session/_header.html.erb
@@ -2,12 +2,19 @@
   <div class="navbar-left">
     <%= link_to 'Trang chủ', root_path, class: 'navbar-brand' %>
     <%= link_to 'About Us', about_us_path, class: 'navbar-brand' %>
+    <% if has_login? === false %>
+      <%= link_to 'Signup', new_user_path, class: "navbar-brand" %>
+      <%= link_to 'Login', login_path, class: "navbar-brand" %>
+    <% end %>
   </div>
-  <div class="navbar-right">
-    <div class="navbar-brand">
-      <% if user.present? %>
-        <%= user.name  %>
-      <% end %>
-    </div>
+  <div class="navbar-search">
+    <%= form_with(local: false) do |form| %>
+      <%= form.text_field :name, placeholder: "Search" %>
+    <% end %>
+  </div>
+  <div class="navbar-brand">
+    <% if user.present? %>
+      <%= user.name  %>
+    <% end %>
   </div>
 </nav>
