--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the Session controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.card .card-body {
+  margin: auto;
+}
+.card .img-avatar {
+  border-radius: 100px;
+}
+.card .card-profile {
+  margin-top: 24px;
+  min-width: 100%;
+}
+
+.card .btn-block {
+  margin-left: auto;
+  margin-right: auto;
+}
+.card .card-profile div + div {
+  padding-top: 8px;
+}
+
+.card .card-profile span {
+  font-weight: bold;
+}
+
+/*Index*/
+
+#id_slider .img-banner {
+  width: 100%;
+}
+#id_slider .hot-products {
+  display: flex;
+  flex-wrap: nowrap;
+}
+.container-fluid .card {
+  min-width: 33.33333% !important;
+}
+.card .card-img-top {
+  border-radius: 0px;
+}
