install font awsome

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,11 @@
 @import "bootstrap";
+@import "font-awesome";
 @import "introduction";
 @import "session";
+
+/*
+ *= require font-awesome
+ */
 
 /*
 Choose 5 color
