--- a/app/views/session/index.html.erb
+++ b/app/views/session/index.html.erb
@@ -96,6 +96,14 @@
     </div>
   </div>
 </div>
+<!--End Content!-->
+
+<!--Footer!-->
+<div id="footer">
+  <div class="icon">
+    <i class="fab fa-facebook-f"></i>
+  </div>
+</div>
 
 <div class="btn-group">
     <div class="flash">
