--- a/app/views/session/index.html.erb
+++ b/app/views/session/index.html.erb
@@ -8,6 +8,13 @@
     <div class="btn-block">
       <%= link_to 'Login', login_path, class: "btn btn-primary btn-login" %>
     </div>
+      <div class="btn-block">
+      <%= link_to 'Create', new_food_path, class: "btn btn-primary btn-login" %>
+    </div>
+    </div>
+      <div class="btn-block">
+      <%= link_to 'Search', search_path, class: "btn btn-primary btn-login" %>
+    </div>
     <div class="flash">
       <% flash.each do |key,value|  %>
         <div class= "flash flash-<% key %>">
