--- a/app/views/search/new.html.erb
+++ b/app/views/search/new.html.erb
@@ -1,3 +1,3 @@
-<%= form_with(model: @book, url: search_path, local: false) do |form| %>
-  <%= form.text_field :keyword%>
-<% end %>
+<input type="text" name="keyword" id="id_keyword"/>
+<div id="id_list_foods"></div>
+<script></script>
